# claudia-lite

./: .gitignore  BUILD_COMMANDS.md  CLAUDE_SETUP.md  Cargo.toml  GOOGLE_DRIVE_STRUCTURE.md  LINUX_BUILD_PLAN.md  LITTLE_HELPER_V2_SPEC.md  MACALLISTER_SPEC.md  MULTI_PROVIDER_COMPLETE.md  OAUTH_COMPLETE_SUMMARY.md  OAUTH_IMPLEMENTATION.md  OAUTH_SETUP_COMPLETE.md  OAUTH_SOLUTION.md  README.md  REFACTOR_SUMMARY.md  SESSION_SUMMARY.md  SETUP_GUIDE.md  TODO_V2.md  bash_commands_reference.md  demo-settings-template.json  install-easy.sh  install-mac-safe.sh  install-mac.sh  install-windows.bat  show-status.sh  test-oauth.sh
.github/workflows/: build-mac.yml
crates/agent_host/: Cargo.toml
crates/agent_host/src/: executor.rs  lib.rs
crates/app/: Cargo.toml
crates/app/src/: context.rs  main.rs  secrets.rs.example
crates/providers/: Cargo.toml
crates/providers/src/: anthropic.rs  gemini.rs  lib.rs  oauth_helper.rs  ollama.rs  openai.rs  router.rs
crates/services/: Cargo.toml
crates/services/src/: file_search.rs  lib.rs  mini_swarm.rs  organizer.rs  slack.rs  support.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/viewers/: Cargo.toml
crates/viewers/src/: image_viewer.rs  lib.rs  text_viewer.rs
installer/: install-windows.ps1  install.sh
