[package]
name = "agent_host"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }
providers = { path = "../providers" }
shared = { path = "../shared" }
