[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.27", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.27"
anyhow = { workspace = true }
shared = { path = "../shared" }
services = { path = "../services" }
agent_host = { path = "../agent_host" }
parking_lot = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }

[package.metadata]
description = "Little Helper - Tarah's File Finder GUI"
